fix: horizontal scrolling now works on brand showcase carousel

--- a/src/components/BrandsShowcase/BrandsShowcase.module.css
+++ b/src/components/BrandsShowcase/BrandsShowcase.module.css
@@ -63,7 +63,7 @@
 }
 
 .imageContainer {
-    margin: 40px 16px 35px 0;
+    margin: 40px 16px 15px 0;
     height: 296px;
     width: 343px;
     position: relative;
@@ -90,6 +90,17 @@
 .productsList {
     display: flex;
     gap: 14px;
-    width: 359px;
-    height: 445px;
+    width: 100%;
+    height: 470px;
+    padding-top: 20px;
+    margin-left: -16px;
+    padding-left: 16px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+}
+
+.productsList::-webkit-scrollbar {
+    display: none;
 }
